cluster/apps/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: traefik.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
spec:
  ingressClassName: "traefik"
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
